--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+<head lang="en">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-   <link rel="stylesheet" href="style.css">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+    body {
+      height: 700px;
+      font-size: 15px;
+      font-family: 'Outfit', sans-serif;
+      background-color: #D5E1EF;
+    }
+
+    #title {
+      font-weight: 700;
+    }
+
+    #caption {
+      font-weight: 400;
+    }
+  </style>
 </head>
+
 <body>
-  <div class="container">
   <div class="card mx-auto p-3 rounded-4" style="width: 18rem; margin-top: 10rem;">
     <img src="./images/image-qr-code.png" class="card-img rounded-4" alt="...">
     <div class="card-body text-center">
       <h5 class="card-title" id="title">Improve your front-end skils by building projects</h5>
-      <p class="card-text" id="caption">Scan this QR code to visit Frontend mentor and take your coding skill to the next level</p>
+      <p class="card-text" id="caption">Scan this QR code to visit Frontend mentor and take your coding skill to the
+        next level</p>
     </div>
-  </div>
-</section>
 </body>
+
 </html>
