fix: vertical alignment

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
     body {
-      height: 700px;
+      height: 900px;
       font-size: 15px;
       font-family: 'Outfit', sans-serif;
       background-color: #D5E1EF;
@@ -36,12 +36,14 @@
 </head>
 
 <body>
-  <div class="card mx-auto p-3 rounded-4" style="width: 18rem; margin-top: 10rem;">
-    <img src="./images/image-qr-code.png" class="card-img rounded-4" alt="...">
-    <div class="card-body text-center">
-      <h5 class="card-title" id="title">Improve your front-end skils by building projects</h5>
-      <p class="card-text" id="caption">Scan this QR code to visit Frontend mentor and take your coding skill to the
-        next level</p>
+  <div class="h-100 d-flex justify-content-center align-items-center">
+    <div class="card mx-auto p-3 rounded-4" style="width: 18rem;">
+      <img src="./images/image-qr-code.png" class="card-img rounded-4" alt="...">
+      <div class="card-body text-center">
+        <h5 class="card-title" id="title">Improve your front-end skils by building projects</h5>
+        <p class="card-text" id="caption">Scan this QR code to visit Frontend mentor and take your coding skill to the
+          next level</p>
+      </div>
     </div>
 </body>
 
